minor changes to make website friendlier on mobile and maybe fix calls

--- a/site/public/style.css
+++ b/site/public/style.css
@@ -26,6 +26,10 @@
 	text-shadow: 0px 0px 25px #bbbbbb;
 }
 
+@media only screen and (max-width: 600px) {
+	font-size: 4em;
+}
+
 .header:hover {
 	color: #5b6369;
 	text-shadow: 0px 0px 25px #f48fb1;
